Controllers/k8s/NodeAffinity.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dotnet
  template:
    metadata:
      labels:
        app: dotnet
    spec:
      containers:
      - name: dotnet
      image: probe1.azurecr.io/dotnet:1.0
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: aks-agentpool-53246458-vmss000001
                operator: In
                values:
                - dotnet
