Controllers/k8s/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet
  namespace: yasmeen
  labels:
    app: dotnet
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dotnet
  template:
    metadata:
      labels:
        app: dotnet
    spec:
      containers:
      - name: dotnet
        image: probe1.azurecr.io/dotnet:1.0
        ports:
        - containerPort: 80
      imagePullSecrets:
       - name: yasu
