Controllers/k8s/Networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dotnet
  namespace: yasmeen
spec:
  podSelector:
    matchLabels:
      app: dotnet
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            role: dotnet
